Scene modules crimplemented. New assets organized for testing.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,25 +2,21 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Turn-Based RPG in Phaser 3</title>
+    <title>PIXEL SOULS</title>
     <meta
-      name="viewport"
-      content="width=device-width,initial-scale=1,user-scalable=no"
+    name="viewport"
+    content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0"
     />
-    <script src="/scripts/phaser.min.js"></script>
-    <script src="/scripts/game.js"></script>
-    <style>
-      html,
-      body {
-        margin: 0;
-        padding: 0;
-      }
-    </style>
   </head>
   <body>
-    <div
-      id="content"
-      style="display: block; width: 100%; text-align: center"
-    ></div>
+    <div id="phaser-game"></div>
+    <script src="/scripts/phaser.min.js" charset="utf-8"></script>
+    <script src="/classes/Player.js" charset="utf-8"></script>
+    <script src="/classes/UiButton.js" charset="utf-8"></script>
+    <script src="/scripts/BootScene.js" charset="utf-8"></script>
+    <script src="/scripts/TitleScene.js" charset="utf-8"></script>
+    <script src="/scripts/GameScene.js" charset="utf-8"></script>
+    <script src="/scripts/UiScene.js" charset="utf-8"></script>
+    <script src="/scripts/game.js" charset="utf-8"></script>
   </body>
 </html>
