--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,16 +7,17 @@
     name="viewport"
     content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0"
     />
+    <script src="/scripts/phaser.min.js" charset="utf-8"></script>
   </head>
   <body>
     <div id="phaser-game"></div>
-    <script src="/scripts/phaser.min.js" charset="utf-8"></script>
-    <script src="/classes/Player.js" charset="utf-8"></script>
+
+    <!-- <script src="/classes/Player.js" charset="utf-8"></script>
     <script src="/classes/UiButton.js" charset="utf-8"></script>
     <script src="/scripts/BootScene.js" charset="utf-8"></script>
     <script src="/scripts/TitleScene.js" charset="utf-8"></script>
     <script src="/scripts/GameScene.js" charset="utf-8"></script>
     <script src="/scripts/UiScene.js" charset="utf-8"></script>
-    <script src="/scripts/game.js" charset="utf-8"></script>
+    <script src="/scripts/game.js" charset="utf-8"></script> -->
   </body>
 </html>
