tileset .JSON updated. Bottom layer now viewable.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,6 @@
     <script src="/scripts/TitleScene.js" charset="utf-8"></script>
     <script src="/scripts/GameScene.js" charset="utf-8"></script>
     <script src="/scripts/UiScene.js" charset="utf-8"></script>
-    <script src="/scripts/game.js" charset="utf-8"></script>
+    <script src="game.js" charset="utf-8"></script>
   </body>
 </html>
