--- a/font.css
+++ b/font.css
@@ -2,3 +2,7 @@
   font-family: "HonokaMincho";
   src: url("/public/assets/font/font_1_honokamin.ttf") format("truetype");
 }
+
+body {
+  font-family: "HonokaMincho";
+}
